<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@mipmap/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/app_name"
        android:theme="@style/toolbar_theme">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@mipmap/logo"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorSecondary"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="20dp"
            android:src="@mipmap/username" />
        <EditText
            android:id="@+id/username_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/username"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorSecondary"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="20dp"
            android:src="@mipmap/password" />
        <EditText
            android:id="@+id/password_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/password"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/login_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonRed"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/login_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonRed"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

</LinearLayout>