<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@mipmap/background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/wel_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_above="@+id/buttons"
        app:title="@string/app_name"
        android:theme="@style/toolbar_theme">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="120dp"
        android:src="@mipmap/logo"/>

    <LinearLayout
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:gravity="center_horizontal|bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="90dp">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonRed"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonRed"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
</RelativeLayout>